# flat-record

./: .ghci  .travis.yml  CastCore.hs  ChangeLog.md  LICENSE  flat-record.cabal
bench/: Cast.hs  Cast2.hs  Cast3.hs  Construct.hs  LargeRecord.hs
src/Data/: FlatHList.hs  FlatRecord.hs
src/Data/FlatHList/: Internal.hs  TypeLevel.hs
src/Data/FlatRecord/: Base.hs  JSON.hs
test/: Spec.hs
test/HList/: BaseSpec.hs
test/Record/: BaseSpec.hs  CastSpec.hs  GenerateSpec.hs  JsonSpec.hs
